# izzy

./: README.md  setup.cfg
src/: izzy.py
src/izzy/: __main__.py  essentials.py
