[metadata]
name = izzy
version = 0.1.2
author = Brent Monning
author_email = brent.monning.jr@gmail.com
description = A tiny, experimental assistant.
url = https://github.com/BrentBoyMeBob/izzy
project_urls =
	     Bug Tracker = https://github.com/BrentBoyMeBob/izzy/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: GNU General Public License version 3.0
	    Operating System :: OS Independent

[options]
package_dir =
	    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
